# ros_impedance_controller

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: joint_state_publisher.yaml  operator.rviz  ros_impedance_controller.yaml  ros_impedance_controller_aliengo.yaml  ros_impedance_controller_climbingrobot.yaml  ros_impedance_controller_go1.yaml  ros_impedance_controller_jumpleg.yaml  ros_impedance_controller_only_torques.yaml  ros_impedance_controller_pd.yaml  ros_impedance_controller_pd_solo.yaml  ros_impedance_controller_pd_solo_flywheel.yaml  ros_impedance_controller_pd_solo_flywheel2.yaml  ros_impedance_controller_solo.yaml  ros_impedance_controller_solo_fw4.yaml
include/ros_impedance_controller/: controller.h
launch/: ros_impedance_controller.launch  ros_impedance_controller_aliengo.launch  ros_impedance_controller_climbingrobot.launch  ros_impedance_controller_customworld.launch  ros_impedance_controller_floating.launch  ros_impedance_controller_hyq.launch  ros_impedance_controller_jumpleg.launch  ros_impedance_controller_solo.launch  ros_impedance_controller_solo12.launch  ros_impedance_controller_solo_flywheel2.launch  ros_impedance_controller_solo_fw.launch  ros_impedance_controller_stdalone.launch  ros_impedance_controller_stdalone_customworld.launch  ros_impedance_controller_stdalone_world.launch  ros_impedance_controller_ur5.launch  visualize.launch  visualize_aliengo.launch  visualize_double-pendulum.launch  visualize_jumpleg.launch  visualize_solo.launch  visualize_solo12.launch  visualize_ur4.launch  visualize_ur5.launch
msg/ros_impedance_controller/: package.xml
src/: controller.cpp  plot_node.cpp
worlds/: climb_wall.world  climb_wall.xacro  jump_platform.world  slow.world  solo.world  tavolo.world
worlds/models/box/: model.config
worlds/models/cylinder/: model.config
worlds/models/jump_platform/: model.sdf
worlds/models/tavolo/: model.config  model.sdf
